corpus/delimiter-stress-test-easy.txt
===============================
Delimiter stress test #1 (easy)
===============================

---
/*
---
*/
'
---
'
"
---
"
// ---
---

<html />

--------------------

(document
    (frontmatter
        (raw_text))
    (element
        (self_closing_tag
            (tag_name))))
